# BioPackathonMCP

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
src/biopackathon_mcp/: __init__.py  indexer.py  ingest_youtube.py  mcp_server.py  setup_claude.py  tools.py
src/biopackathon_mcp/audit/: audit_repo.py  rules.yml
tests/: conftest.py  test_audit.py  test_search.py  test_setup.py
tests/fixtures/: sample_subtitles.json
tests/fixtures/pseudo_repo/: Dockerfile  README.md  main.py  requirements.txt
tests/fixtures/pseudo_repo_minimal/: README.md  analysis.py
